# tp-indus-pgravejal

./: README.md  main.py  run_unit_tests.py
sales_pipeline/: README.md  pyproject.toml  requirements.txt  run_unit_tests.ipynb
sales_pipeline.egg-info/: requires.txt
sales_pipeline/sales_pipeline.egg-info/: PKG-INFO  SOURCES.txt
sales_pipeline/sales_pipeline/bronze/: ingestion.py
sales_pipeline/sales_pipeline/config/: config.yaml
sales_pipeline/sales_pipeline/gold/: aggregation.py
sales_pipeline/sales_pipeline/silver/: cleaning.py
sales_pipeline/sales_pipeline/utils/: spark_session.py
sales_pipeline/tests/: conftest.py  test_gold.py  test_silver.py
